Fix checkstyle violations